// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AnnotationTable > should be able to export a CSV 1`] = `
"# URL: http://localhost:3000/annotations?viewId=xxxx&ds=2019-02-12_15h55m06s
\\"group\\",\\"datasetName\\",\\"datasetId\\",\\"formula\\",\\"adduct\\",\\"chemMod\\",\\"neutralLoss\\",\\"ion\\",\\"mz\\",\\"msm\\",\\"fdr\\",\\"rhoSpatial\\",\\"rhoSpectral\\",\\"rhoChaos\\",\\"moleculeNames\\",\\"moleculeIds\\",\\"minIntensity\\",\\"maxIntensity\\",\\"totalIntensity\\",\\"isomers\\",\\"isobars\\",\\"offSample\\",\\"rawOffSampleProb\\",\\"isobarIons\\"
\\"Laboratory of European Molecular Biology\\",\\"Untreated_3_434\\",\\"2019-02-12_15h55m06s\\",\\"C19H18N2O7S2\\",\\"M-H\\",\\"\\",\\"\\",\\"C19H18N2O7S2-H+\\",\\"1\\",\\"0.657486\\",\\"0.1\\",\\"0.686362\\",\\"0.959122\\",\\"0.998756\\",\\"C.I. Food Red 6\\",\\"HMDB0032738\\",\\"0\\",\\"0\\",\\"0\\",\\"1\\",\\"2\\",\\"false\\",\\"0.03\\",\\", \\"
\\"Laboratory of European Molecular Biology\\",\\"Untreated_3_434\\",\\"2019-02-12_15h55m06s\\",\\"C19H18N2O7S2\\",\\"M-H\\",\\"\\",\\"\\",\\"C19H18N2O7S2-H+\\",\\"2\\",\\"0.657486\\",\\"0.1\\",\\"0.686362\\",\\"0.959122\\",\\"0.998756\\",\\"C.I. Food Red 6\\",\\"HMDB0032738\\",\\"0\\",\\"0\\",\\"0\\",\\"1\\",\\"2\\",\\"false\\",\\"0.03\\",\\", \\"
\\"Laboratory of European Molecular Biology\\",\\"Untreated_3_434\\",\\"2019-02-12_15h55m06s\\",\\"C19H18N2O7S2\\",\\"M-H\\",\\"\\",\\"\\",\\"C19H18N2O7S2-H+\\",\\"1\\",\\"0.657486\\",\\"0.1\\",\\"0.686362\\",\\"0.959122\\",\\"0.998756\\",\\"C.I. Food Red 6\\",\\"HMDB0032738\\",\\"0\\",\\"0\\",\\"0\\",\\"1\\",\\"2\\",\\"false\\",\\"0.03\\",\\", \\"
\\"Laboratory of European Molecular Biology\\",\\"Untreated_3_434\\",\\"2019-02-12_15h55m06s\\",\\"C19H18N2O7S2\\",\\"M-H\\",\\"\\",\\"\\",\\"C19H18N2O7S2-H+\\",\\"2\\",\\"0.657486\\",\\"0.1\\",\\"0.686362\\",\\"0.959122\\",\\"0.998756\\",\\"C.I. Food Red 6\\",\\"HMDB0032738\\",\\"0\\",\\"0\\",\\"0\\",\\"1\\",\\"2\\",\\"false\\",\\"0.03\\",\\", \\"
"
`;

exports[`AnnotationTable > should match snapshot 1`] = `
"<div class=\\"el-row\\">
  <div class=\\"el-table--fit el-table--striped el-table--border el-table--enable-row-hover el-table--enable-row-transition el-table--small el-table el-table--layout-fixed\\" data-prefix=\\"el\\" id=\\"annot-table\\" element-loading-text=\\"Loading results …\\" tabindex=\\"1\\" loading-number=\\"1\\">
    <div class=\\"el-table__inner-wrapper\\">
      <div class=\\"hidden-columns\\">
        <div></div>
        <div></div>
        <div></div>
        <!--v-if-->
        <div></div>
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <div></div>
        <!--v-if-->
        <!--v-if-->
        <div></div>
        <div></div>
        <div></div>
        <!--v-if-->
        <div></div>
        <!--v-if-->
      </div>
      <div class=\\"el-table__header-wrapper\\">
        <table class=\\"el-table__header\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\">
          <colgroup>
            <col name=\\"el-table_1_column_1\\" width=\\"95\\">
            <col name=\\"el-table_1_column_2\\" width=\\"140\\">
            <col name=\\"el-table_1_column_3\\" width=\\"120\\">
            <col name=\\"el-table_1_column_4\\" width=\\"65\\">
            <col name=\\"el-table_1_column_5\\" width=\\"70\\">
            <col name=\\"el-table_1_column_6\\" width=\\"90\\">
            <col name=\\"el-table_1_column_7\\" width=\\"80\\">
            <col name=\\"el-table_1_column_8\\" width=\\"120\\">
            <col name=\\"el-table_1_column_9\\" width=\\"60\\">
          </colgroup>
          <thead class=\\"\\">
            <tr class=\\"\\">
              <th class=\\"el-table_1_column_1 is-leaf is-sortable el-table__cell\\" colspan=\\"1\\" rowspan=\\"1\\">
                <div class=\\"cell\\">Lab<span class=\\"caret-wrapper\\"><i class=\\"sort-caret ascending\\"></i><i class=\\"sort-caret descending\\"></i></span>
                  <!---->
                </div>
              </th>
              <th class=\\"el-table_1_column_2 is-leaf is-sortable el-table__cell\\" colspan=\\"1\\" rowspan=\\"1\\">
                <div class=\\"cell\\">Dataset<span class=\\"caret-wrapper\\"><i class=\\"sort-caret ascending\\"></i><i class=\\"sort-caret descending\\"></i></span>
                  <!---->
                </div>
              </th>
              <th class=\\"el-table_1_column_3 is-leaf is-sortable el-table__cell\\" colspan=\\"1\\" rowspan=\\"1\\">
                <div class=\\"cell\\">Annotation<span class=\\"caret-wrapper\\"><i class=\\"sort-caret ascending\\"></i><i class=\\"sort-caret descending\\"></i></span>
                  <!---->
                </div>
              </th>
              <th class=\\"el-table_1_column_4 is-leaf is-sortable el-table__cell\\" colspan=\\"1\\" rowspan=\\"1\\">
                <div class=\\"cell\\">m/z<span class=\\"caret-wrapper\\"><i class=\\"sort-caret ascending\\"></i><i class=\\"sort-caret descending\\"></i></span>
                  <!---->
                </div>
              </th>
              <th class=\\"el-table_1_column_5 is-leaf is-sortable el-table__cell\\" colspan=\\"1\\" rowspan=\\"1\\">
                <div class=\\"cell\\">MSM<span class=\\"caret-wrapper\\"><i class=\\"sort-caret ascending\\"></i><i class=\\"sort-caret descending\\"></i></span>
                  <!---->
                </div>
              </th>
              <th class=\\"el-table_1_column_6 is-leaf is-sortable el-table__cell\\" colspan=\\"1\\" rowspan=\\"1\\">
                <div class=\\"cell\\">Isomers<span class=\\"caret-wrapper\\"><i class=\\"sort-caret ascending\\"></i><i class=\\"sort-caret descending\\"></i></span>
                  <!---->
                </div>
              </th>
              <th class=\\"el-table_1_column_7 is-leaf is-sortable el-table__cell\\" colspan=\\"1\\" rowspan=\\"1\\">
                <div class=\\"cell\\">Isobars<span class=\\"caret-wrapper\\"><i class=\\"sort-caret ascending\\"></i><i class=\\"sort-caret descending\\"></i></span>
                  <!---->
                </div>
              </th>
              <th class=\\"el-table_1_column_8 is-leaf is-sortable el-table__cell\\" colspan=\\"1\\" rowspan=\\"1\\">
                <div class=\\"cell\\">Max Intensity<span class=\\"caret-wrapper\\"><i class=\\"sort-caret ascending\\"></i><i class=\\"sort-caret descending\\"></i></span>
                  <!---->
                </div>
              </th>
              <th class=\\"el-table_1_column_9 fdr-cell is-leaf is-sortable el-table__cell\\" colspan=\\"1\\" rowspan=\\"1\\">
                <div class=\\"cell\\">FDR<span class=\\"caret-wrapper\\"><i class=\\"sort-caret ascending\\"></i><i class=\\"sort-caret descending\\"></i></span>
                  <!---->
                </div>
              </th>
            </tr>
          </thead>
        </table>
      </div>
      <div class=\\"el-table__body-wrapper\\">
        <div class=\\"el-scrollbar\\">
          <div class=\\"el-scrollbar__wrap el-scrollbar__wrap--hidden-default\\">
            <div class=\\"el-scrollbar__view\\" style=\\"display: inline-block; vertical-align: middle;\\">
              <table class=\\"el-table__body\\" cellspacing=\\"0\\" cellpadding=\\"0\\" border=\\"0\\" style=\\"table-layout: fixed;\\">
                <colgroup>
                  <col name=\\"el-table_1_column_1\\" width=\\"95\\">
                  <col name=\\"el-table_1_column_2\\" width=\\"140\\">
                  <col name=\\"el-table_1_column_3\\" width=\\"120\\">
                  <col name=\\"el-table_1_column_4\\" width=\\"65\\">
                  <col name=\\"el-table_1_column_5\\" width=\\"70\\">
                  <col name=\\"el-table_1_column_6\\" width=\\"90\\">
                  <col name=\\"el-table_1_column_7\\" width=\\"80\\">
                  <col name=\\"el-table_1_column_8\\" width=\\"120\\">
                  <col name=\\"el-table_1_column_9\\" width=\\"60\\">
                </colgroup>
                <!--v-if-->
                <tbody tabindex=\\"-1\\">
                  <tr class=\\"el-table__row fdr-10 coloc-50\\">
                    <td class=\\"el-table_1_column_1 el-table__cell\\" rowspan=\\"1\\" colspan=\\"1\\">
                      <div class=\\"cell\\">
                        <!---->
                        <div class=\\"cell-wrapper\\"><span class=\\"cell-span\\"><span>Laboratory of European Molecular Biology</span></span><svg class=\\"cell-filter-button\\"></svg></div>
                      </div>
                    </td>
                    <td class=\\"el-table_1_column_2 el-table__cell\\" rowspan=\\"1\\" colspan=\\"1\\">
                      <div class=\\"cell\\">
                        <!---->
                        <div class=\\"cell-wrapper\\"><span class=\\"cell-span\\">Untreated_3_434</span><svg class=\\"cell-filter-button\\"></svg></div>
                      </div>
                    </td>
                    <td class=\\"el-table_1_column_3 el-table__cell\\" rowspan=\\"1\\" colspan=\\"1\\">
                      <div class=\\"cell\\">
                        <!---->
                        <div class=\\"cell-wrapper\\">
                          <div data-v-dd35c778=\\"\\" class=\\"flex\\"><span>[C<sub class=\\"leading-none\\">19</sub>H<sub class=\\"leading-none\\">18</sub>N<sub class=\\"leading-none\\">2</sub>O<sub class=\\"leading-none\\">7</sub>S<sub class=\\"leading-none\\">2</sub> - H]⁺</span>
                            <!--v-if-->
                            <!--v-if-->
                          </div>
                          <div data-v-dd35c778=\\"\\" class=\\"mock-el-popover cell-span\\" hide-after=\\"0\\" show-after=\\"0\\" trigger=\\"hover\\" virtual-triggering=\\"\\" placement=\\"right\\" virtual-ref=\\"[object HTMLDivElement]\\">
                            <div data-v-dd35c778=\\"\\" class=\\"leading-5 py-2 px-3 font-normal content text-sm text-left\\">
                              <!--v-if-->
                              <p data-v-dd35c778=\\"\\" class=\\"title\\">Candidate molecule</p>
                              <ul data-v-dd35c778=\\"\\" class=\\"p-0 list-none leading-7\\">
                                <li data-v-dd35c778=\\"\\">C.I. Food Red 6</li>
                                <!--v-if-->
                              </ul>
                              <div data-v-dd35c778=\\"\\">
                                <p data-v-dd35c778=\\"\\" class=\\"title\\"><span data-v-dd35c778=\\"\\">2 isomeric ions were annotated</span></p>
                                <p data-v-dd35c778=\\"\\">Check the <b data-v-dd35c778=\\"\\">Molecules</b> panel for more candidates.</p>
                              </div>
                              <!--v-if-->
                            </div>
                          </div><svg class=\\"cell-filter-button\\"></svg>
                        </div>
                      </div>
                    </td>
                    <td class=\\"el-table_1_column_4 el-table__cell\\" rowspan=\\"1\\" colspan=\\"1\\">
                      <div class=\\"cell\\">
                        <!---->
                        <div class=\\"cell-wrapper\\"><span class=\\"cell-span\\">449.0482</span><svg class=\\"cell-filter-button\\"></svg></div>
                      </div>
                    </td>
                    <td class=\\"el-table_1_column_5 el-table__cell\\" rowspan=\\"1\\" colspan=\\"1\\">
                      <div class=\\"cell\\">
                        <!----><span>0.657</span>
                      </div>
                    </td>
                    <td class=\\"el-table_1_column_6 el-table__cell\\" rowspan=\\"1\\" colspan=\\"1\\">
                      <div class=\\"cell\\">
                        <!---->1
                      </div>
                    </td>
                    <td class=\\"el-table_1_column_7 el-table__cell\\" rowspan=\\"1\\" colspan=\\"1\\">
                      <div class=\\"cell\\">
                        <!---->2
                      </div>
                    </td>
                    <td class=\\"el-table_1_column_8 el-table__cell\\" rowspan=\\"1\\" colspan=\\"1\\">
                      <div class=\\"cell\\">
                        <!---->0.0
                      </div>
                    </td>
                    <td class=\\"el-table_1_column_9 fdr-cell el-table__cell\\" rowspan=\\"1\\" colspan=\\"1\\">
                      <div class=\\"cell\\">
                        <!----><span>10%</span>
                      </div>
                    </td>
                  </tr>
                </tbody>
                <!--v-if-->
              </table>
              <!--v-if-->
              <!--v-if-->
            </div>
          </div>
          <div class=\\"el-scrollbar__bar is-horizontal\\" style=\\"display: none;\\">
            <div class=\\"el-scrollbar__thumb\\" style=\\"transform: translateX(0%);\\"></div>
          </div>
          <div class=\\"el-scrollbar__bar is-vertical\\" style=\\"display: none;\\">
            <div class=\\"el-scrollbar__thumb\\" style=\\"transform: translateY(0%);\\"></div>
          </div>
        </div>
      </div>
      <!--v-if-->
      <div class=\\"el-table__border-left-patch\\"></div>
    </div>
    <div class=\\"el-table__column-resize-proxy\\" style=\\"display: none;\\"></div>
    <div class=\\"el-loading-mask el-loading-fade-enter-from el-loading-fade-leave-from el-loading-fade-leave-active\\" style=\\"\\">
      <div class=\\"el-loading-spinner\\"><svg class=\\"circular\\" viewBox=\\"0 0 50 50\\">
          <circle class=\\"path\\" cx=\\"25\\" cy=\\"25\\" r=\\"20\\" fill=\\"none\\"></circle>
        </svg>
        <p class=\\"el-loading-text\\">Loading results …</p>
      </div>
    </div>
  </div>
  <div class=\\"flex justify-between items-start mt-2 w-full\\">
    <div class=\\"mt-1\\">
      <div class=\\"el-pagination\\"><button type=\\"button\\" class=\\"btn-prev is-first\\" disabled=\\"\\" aria-label=\\"Go to previous page\\" aria-disabled=\\"true\\">
          <div class=\\"mock-el-icon\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
              <path fill=\\"currentColor\\" d=\\"M609.408 149.376 277.76 489.6a32 32 0 0 0 0 44.672l331.648 340.352a29.12 29.12 0 0 0 41.728 0 30.592 30.592 0 0 0 0-42.752L339.264 511.936l311.872-319.872a30.592 30.592 0 0 0 0-42.688 29.12 29.12 0 0 0-41.728 0z\\"></path>
            </svg></div>
        </button>
        <ul class=\\"el-pager\\">
          <li class=\\"is-active number\\" aria-current=\\"true\\" aria-label=\\"page 1\\" tabindex=\\"0\\"> 1 </li>
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
        </ul><button type=\\"button\\" class=\\"btn-next\\" disabled=\\"\\" aria-label=\\"Go to next page\\" aria-disabled=\\"true\\">
          <div class=\\"mock-el-icon\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
              <path fill=\\"currentColor\\" d=\\"M340.864 149.312a30.592 30.592 0 0 0 0 42.752L652.736 512 340.864 831.872a30.592 30.592 0 0 0 0 42.752 29.12 29.12 0 0 0 41.728 0L714.24 534.336a32 32 0 0 0 0-44.672L382.592 149.376a29.12 29.12 0 0 0-41.728 0z\\"></path>
            </svg></div>
        </button><span class=\\"el-pagination__sizes is-last\\"><div class=\\"mock-el-select\\" model-value=\\"15\\" disabled=\\"false\\" popper-class=\\"\\" size=\\"default\\" teleported=\\"true\\" validate-event=\\"false\\"><div class=\\"mock-el-option\\" label=\\"15/page\\" value=\\"15\\"></div><div class=\\"mock-el-option\\" label=\\"20/page\\" value=\\"20\\"></div><div class=\\"mock-el-option\\" label=\\"25/page\\" value=\\"25\\"></div><div class=\\"mock-el-option\\" label=\\"30/page\\" value=\\"30\\"></div></div></span>
      </div>
      <div id=\\"annot-count\\" class=\\"mt-2\\"><b>1</b> matching record</div>
      <div class=\\"mt-2\\">
        <div class=\\"fdr-legend-header\\">FDR levels:</div>
        <div class=\\"fdr-legend fdr-5\\">5%</div>
        <div class=\\"fdr-legend fdr-10\\">10%</div>
        <div class=\\"fdr-legend fdr-20\\">20%</div>
        <div class=\\"fdr-legend fdr-50\\">50%</div>
      </div>
    </div>
    <div class=\\"flex w-full items-center justify-end flex-wrap\\">
      <div class=\\"mock-el-popover mt-1\\" width=\\"200\\" trigger=\\"click\\">
        <div>
          <div class=\\"cursor-pointer select-none\\">
            <div class=\\"mock-el-icon el-icon-check\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                <path fill=\\"currentColor\\" d=\\"M406.656 706.944 195.84 496.256a32 32 0 1 0-45.248 45.248l256 256 512-512a32 32 0 0 0-45.248-45.248L406.592 706.944z\\"></path>
              </svg></div><span>Lab</span>
          </div>
          <div class=\\"cursor-pointer select-none\\">
            <div class=\\"mock-el-icon el-icon-check\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                <path fill=\\"currentColor\\" d=\\"M406.656 706.944 195.84 496.256a32 32 0 1 0-45.248 45.248l256 256 512-512a32 32 0 0 0-45.248-45.248L406.592 706.944z\\"></path>
              </svg></div><span>Dataset</span>
          </div>
          <div class=\\"cursor-pointer select-none\\">
            <div class=\\"mock-el-icon el-icon-check\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                <path fill=\\"currentColor\\" d=\\"M406.656 706.944 195.84 496.256a32 32 0 1 0-45.248 45.248l256 256 512-512a32 32 0 0 0-45.248-45.248L406.592 706.944z\\"></path>
              </svg></div><span>Annotation</span>
          </div>
          <div class=\\"cursor-pointer select-none\\">
            <div class=\\"mock-el-icon el-icon-check invisible\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                <path fill=\\"currentColor\\" d=\\"M406.656 706.944 195.84 496.256a32 32 0 1 0-45.248 45.248l256 256 512-512a32 32 0 0 0-45.248-45.248L406.592 706.944z\\"></path>
              </svg></div><span>Adduct</span>
          </div>
          <div class=\\"cursor-pointer select-none\\">
            <div class=\\"mock-el-icon el-icon-check\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                <path fill=\\"currentColor\\" d=\\"M406.656 706.944 195.84 496.256a32 32 0 1 0-45.248 45.248l256 256 512-512a32 32 0 0 0-45.248-45.248L406.592 706.944z\\"></path>
              </svg></div><span>m/z</span>
          </div>
          <div class=\\"cursor-pointer select-none\\">
            <div class=\\"mock-el-icon el-icon-check invisible\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                <path fill=\\"currentColor\\" d=\\"M406.656 706.944 195.84 496.256a32 32 0 1 0-45.248 45.248l256 256 512-512a32 32 0 0 0-45.248-45.248L406.592 706.944z\\"></path>
              </svg></div><span>Off-sample probability %</span>
          </div>
          <div class=\\"cursor-pointer select-none\\">
            <div class=\\"mock-el-icon el-icon-check invisible\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                <path fill=\\"currentColor\\" d=\\"M406.656 706.944 195.84 496.256a32 32 0 1 0-45.248 45.248l256 256 512-512a32 32 0 0 0-45.248-45.248L406.592 706.944z\\"></path>
              </svg></div><span> ρ<sub>spatial</sub></span>
          </div>
          <div class=\\"cursor-pointer select-none\\">
            <div class=\\"mock-el-icon el-icon-check invisible\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                <path fill=\\"currentColor\\" d=\\"M406.656 706.944 195.84 496.256a32 32 0 1 0-45.248 45.248l256 256 512-512a32 32 0 0 0-45.248-45.248L406.592 706.944z\\"></path>
              </svg></div><span> ρ<sub>spectral</sub></span>
          </div>
          <div class=\\"cursor-pointer select-none\\">
            <div class=\\"mock-el-icon el-icon-check invisible\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                <path fill=\\"currentColor\\" d=\\"M406.656 706.944 195.84 496.256a32 32 0 1 0-45.248 45.248l256 256 512-512a32 32 0 0 0-45.248-45.248L406.592 706.944z\\"></path>
              </svg></div><span> ρ<sub>chaos</sub></span>
          </div>
          <div class=\\"cursor-pointer select-none\\">
            <div class=\\"mock-el-icon el-icon-check\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                <path fill=\\"currentColor\\" d=\\"M406.656 706.944 195.84 496.256a32 32 0 1 0-45.248 45.248l256 256 512-512a32 32 0 0 0-45.248-45.248L406.592 706.944z\\"></path>
              </svg></div><span>MSM</span>
          </div>
          <div class=\\"cursor-pointer select-none\\">
            <div class=\\"mock-el-icon el-icon-check invisible\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                <path fill=\\"currentColor\\" d=\\"M406.656 706.944 195.84 496.256a32 32 0 1 0-45.248 45.248l256 256 512-512a32 32 0 0 0-45.248-45.248L406.592 706.944z\\"></path>
              </svg></div><span>Database</span>
          </div>
          <div class=\\"cursor-pointer select-none\\">
            <div class=\\"mock-el-icon el-icon-check invisible\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                <path fill=\\"currentColor\\" d=\\"M406.656 706.944 195.84 496.256a32 32 0 1 0-45.248 45.248l256 256 512-512a32 32 0 0 0-45.248-45.248L406.592 706.944z\\"></path>
              </svg></div><span>Molecules</span>
          </div>
          <div class=\\"cursor-pointer select-none\\">
            <div class=\\"mock-el-icon el-icon-check\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                <path fill=\\"currentColor\\" d=\\"M406.656 706.944 195.84 496.256a32 32 0 1 0-45.248 45.248l256 256 512-512a32 32 0 0 0-45.248-45.248L406.592 706.944z\\"></path>
              </svg></div><span>Isomers</span>
          </div>
          <div class=\\"cursor-pointer select-none\\">
            <div class=\\"mock-el-icon el-icon-check\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                <path fill=\\"currentColor\\" d=\\"M406.656 706.944 195.84 496.256a32 32 0 1 0-45.248 45.248l256 256 512-512a32 32 0 0 0-45.248-45.248L406.592 706.944z\\"></path>
              </svg></div><span>Isobars</span>
          </div>
          <div class=\\"cursor-pointer select-none\\">
            <div class=\\"mock-el-icon el-icon-check\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                <path fill=\\"currentColor\\" d=\\"M406.656 706.944 195.84 496.256a32 32 0 1 0-45.248 45.248l256 256 512-512a32 32 0 0 0-45.248-45.248L406.592 706.944z\\"></path>
              </svg></div><span>Max Intensity</span>
          </div>
          <div class=\\"cursor-pointer select-none\\">
            <div class=\\"mock-el-icon el-icon-check invisible\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                <path fill=\\"currentColor\\" d=\\"M406.656 706.944 195.84 496.256a32 32 0 1 0-45.248 45.248l256 256 512-512a32 32 0 0 0-45.248-45.248L406.592 706.944z\\"></path>
              </svg></div><span>Total Intensity</span>
          </div>
          <div class=\\"cursor-pointer select-none\\">
            <div class=\\"mock-el-icon el-icon-check\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                <path fill=\\"currentColor\\" d=\\"M406.656 706.944 195.84 496.256a32 32 0 1 0-45.248 45.248l256 256 512-512a32 32 0 0 0-45.248-45.248L406.592 706.944z\\"></path>
              </svg></div><span>FDR</span>
          </div>
          <div class=\\"cursor-pointer select-none\\">
            <!--v-if-->
          </div>
        </div>
      </div>
      <div class=\\"mock-el-popover select-btn-wrapper ml-2 mt-1\\" popper-class=\\"export-pop\\" trigger=\\"click\\">
        <p class=\\"export-option\\">Annotations table</p>
        <p class=\\"export-option\\">Pixel intensities</p>
      </div>
      <div class=\\"ml-2 mt-1\\"><button ariadisabled=\\"false\\" type=\\"button\\" class=\\"el-button full-screen-btn\\">
          <!--v-if--><span class=\\"\\"><svg class=\\"full-screen-icon\\"></svg></span>
        </button></div>
    </div>
  </div>
</div>"
`;

exports[`AnnotationTable > should match snapshot when loading snapshot 1`] = `
"<div class=\\"el-row\\">
  <div class=\\"el-table--fit el-table--striped el-table--border el-table--enable-row-hover el-table--enable-row-transition el-table--small el-table el-table--layout-fixed\\" data-prefix=\\"el\\" id=\\"annot-table\\" element-loading-text=\\"Loading results …\\" tabindex=\\"1\\" loading-number=\\"1\\">
    <div class=\\"el-table__inner-wrapper\\">
      <div class=\\"hidden-columns\\">
        <div></div>
        <div></div>
        <div></div>
        <!--v-if-->
        <div></div>
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <div></div>
        <!--v-if-->
        <!--v-if-->
        <div></div>
        <div></div>
        <div></div>
        <!--v-if-->
        <div></div>
        <!--v-if-->
      </div>
      <div class=\\"el-table__header-wrapper\\">
        <table class=\\"el-table__header\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\">
          <colgroup>
            <col name=\\"el-table_2_column_10\\" width=\\"95\\">
            <col name=\\"el-table_2_column_11\\" width=\\"140\\">
            <col name=\\"el-table_2_column_12\\" width=\\"120\\">
            <col name=\\"el-table_2_column_13\\" width=\\"65\\">
            <col name=\\"el-table_2_column_14\\" width=\\"70\\">
            <col name=\\"el-table_2_column_15\\" width=\\"90\\">
            <col name=\\"el-table_2_column_16\\" width=\\"80\\">
            <col name=\\"el-table_2_column_17\\" width=\\"120\\">
            <col name=\\"el-table_2_column_18\\" width=\\"60\\">
          </colgroup>
          <thead class=\\"\\">
            <tr class=\\"\\">
              <th class=\\"el-table_2_column_10 is-leaf is-sortable el-table__cell\\" colspan=\\"1\\" rowspan=\\"1\\">
                <div class=\\"cell\\">Lab<span class=\\"caret-wrapper\\"><i class=\\"sort-caret ascending\\"></i><i class=\\"sort-caret descending\\"></i></span>
                  <!---->
                </div>
              </th>
              <th class=\\"el-table_2_column_11 is-leaf is-sortable el-table__cell\\" colspan=\\"1\\" rowspan=\\"1\\">
                <div class=\\"cell\\">Dataset<span class=\\"caret-wrapper\\"><i class=\\"sort-caret ascending\\"></i><i class=\\"sort-caret descending\\"></i></span>
                  <!---->
                </div>
              </th>
              <th class=\\"el-table_2_column_12 is-leaf is-sortable el-table__cell\\" colspan=\\"1\\" rowspan=\\"1\\">
                <div class=\\"cell\\">Annotation<span class=\\"caret-wrapper\\"><i class=\\"sort-caret ascending\\"></i><i class=\\"sort-caret descending\\"></i></span>
                  <!---->
                </div>
              </th>
              <th class=\\"el-table_2_column_13 is-leaf is-sortable el-table__cell\\" colspan=\\"1\\" rowspan=\\"1\\">
                <div class=\\"cell\\">m/z<span class=\\"caret-wrapper\\"><i class=\\"sort-caret ascending\\"></i><i class=\\"sort-caret descending\\"></i></span>
                  <!---->
                </div>
              </th>
              <th class=\\"el-table_2_column_14 is-leaf is-sortable el-table__cell\\" colspan=\\"1\\" rowspan=\\"1\\">
                <div class=\\"cell\\">MSM<span class=\\"caret-wrapper\\"><i class=\\"sort-caret ascending\\"></i><i class=\\"sort-caret descending\\"></i></span>
                  <!---->
                </div>
              </th>
              <th class=\\"el-table_2_column_15 is-leaf is-sortable el-table__cell\\" colspan=\\"1\\" rowspan=\\"1\\">
                <div class=\\"cell\\">Isomers<span class=\\"caret-wrapper\\"><i class=\\"sort-caret ascending\\"></i><i class=\\"sort-caret descending\\"></i></span>
                  <!---->
                </div>
              </th>
              <th class=\\"el-table_2_column_16 is-leaf is-sortable el-table__cell\\" colspan=\\"1\\" rowspan=\\"1\\">
                <div class=\\"cell\\">Isobars<span class=\\"caret-wrapper\\"><i class=\\"sort-caret ascending\\"></i><i class=\\"sort-caret descending\\"></i></span>
                  <!---->
                </div>
              </th>
              <th class=\\"el-table_2_column_17 is-leaf is-sortable el-table__cell\\" colspan=\\"1\\" rowspan=\\"1\\">
                <div class=\\"cell\\">Max Intensity<span class=\\"caret-wrapper\\"><i class=\\"sort-caret ascending\\"></i><i class=\\"sort-caret descending\\"></i></span>
                  <!---->
                </div>
              </th>
              <th class=\\"el-table_2_column_18 fdr-cell is-leaf is-sortable el-table__cell\\" colspan=\\"1\\" rowspan=\\"1\\">
                <div class=\\"cell\\">FDR<span class=\\"caret-wrapper\\"><i class=\\"sort-caret ascending\\"></i><i class=\\"sort-caret descending\\"></i></span>
                  <!---->
                </div>
              </th>
            </tr>
          </thead>
        </table>
      </div>
      <div class=\\"el-table__body-wrapper\\">
        <div class=\\"el-scrollbar\\">
          <div class=\\"el-scrollbar__wrap el-scrollbar__wrap--hidden-default\\">
            <div class=\\"el-scrollbar__view\\" style=\\"display: inline-block; vertical-align: middle;\\">
              <table class=\\"el-table__body\\" cellspacing=\\"0\\" cellpadding=\\"0\\" border=\\"0\\" style=\\"table-layout: fixed;\\">
                <colgroup>
                  <col name=\\"el-table_2_column_10\\" width=\\"95\\">
                  <col name=\\"el-table_2_column_11\\" width=\\"140\\">
                  <col name=\\"el-table_2_column_12\\" width=\\"120\\">
                  <col name=\\"el-table_2_column_13\\" width=\\"65\\">
                  <col name=\\"el-table_2_column_14\\" width=\\"70\\">
                  <col name=\\"el-table_2_column_15\\" width=\\"90\\">
                  <col name=\\"el-table_2_column_16\\" width=\\"80\\">
                  <col name=\\"el-table_2_column_17\\" width=\\"120\\">
                  <col name=\\"el-table_2_column_18\\" width=\\"60\\">
                </colgroup>
                <!--v-if-->
                <tbody tabindex=\\"-1\\">
                  <tr class=\\"el-table__row fdr-10 coloc-50\\">
                    <td class=\\"el-table_2_column_10 el-table__cell\\" rowspan=\\"1\\" colspan=\\"1\\">
                      <div class=\\"cell\\">
                        <!---->
                        <div class=\\"cell-wrapper\\"><span class=\\"cell-span\\"><span>Laboratory of European Molecular Biology</span></span><svg class=\\"cell-filter-button\\"></svg></div>
                      </div>
                    </td>
                    <td class=\\"el-table_2_column_11 el-table__cell\\" rowspan=\\"1\\" colspan=\\"1\\">
                      <div class=\\"cell\\">
                        <!---->
                        <div class=\\"cell-wrapper\\"><span class=\\"cell-span\\">Untreated_3_434</span><svg class=\\"cell-filter-button\\"></svg></div>
                      </div>
                    </td>
                    <td class=\\"el-table_2_column_12 el-table__cell\\" rowspan=\\"1\\" colspan=\\"1\\">
                      <div class=\\"cell\\">
                        <!---->
                        <div class=\\"cell-wrapper\\">
                          <div data-v-dd35c778=\\"\\" class=\\"flex\\"><span>[C<sub class=\\"leading-none\\">19</sub>H<sub class=\\"leading-none\\">18</sub>N<sub class=\\"leading-none\\">2</sub>O<sub class=\\"leading-none\\">7</sub>S<sub class=\\"leading-none\\">2</sub> - H]⁺</span>
                            <!--v-if-->
                            <!--v-if-->
                          </div>
                          <div data-v-dd35c778=\\"\\" class=\\"mock-el-popover cell-span\\" hide-after=\\"0\\" show-after=\\"0\\" trigger=\\"hover\\" virtual-triggering=\\"\\" placement=\\"right\\" virtual-ref=\\"[object HTMLDivElement]\\">
                            <div data-v-dd35c778=\\"\\" class=\\"leading-5 py-2 px-3 font-normal content text-sm text-left\\">
                              <!--v-if-->
                              <p data-v-dd35c778=\\"\\" class=\\"title\\">Candidate molecule</p>
                              <ul data-v-dd35c778=\\"\\" class=\\"p-0 list-none leading-7\\">
                                <li data-v-dd35c778=\\"\\">C.I. Food Red 6</li>
                                <!--v-if-->
                              </ul>
                              <div data-v-dd35c778=\\"\\">
                                <p data-v-dd35c778=\\"\\" class=\\"title\\"><span data-v-dd35c778=\\"\\">2 isomeric ions were annotated</span></p>
                                <p data-v-dd35c778=\\"\\">Check the <b data-v-dd35c778=\\"\\">Molecules</b> panel for more candidates.</p>
                              </div>
                              <!--v-if-->
                            </div>
                          </div><svg class=\\"cell-filter-button\\"></svg>
                        </div>
                      </div>
                    </td>
                    <td class=\\"el-table_2_column_13 el-table__cell\\" rowspan=\\"1\\" colspan=\\"1\\">
                      <div class=\\"cell\\">
                        <!---->
                        <div class=\\"cell-wrapper\\"><span class=\\"cell-span\\">449.0482</span><svg class=\\"cell-filter-button\\"></svg></div>
                      </div>
                    </td>
                    <td class=\\"el-table_2_column_14 el-table__cell\\" rowspan=\\"1\\" colspan=\\"1\\">
                      <div class=\\"cell\\">
                        <!----><span>0.657</span>
                      </div>
                    </td>
                    <td class=\\"el-table_2_column_15 el-table__cell\\" rowspan=\\"1\\" colspan=\\"1\\">
                      <div class=\\"cell\\">
                        <!---->1
                      </div>
                    </td>
                    <td class=\\"el-table_2_column_16 el-table__cell\\" rowspan=\\"1\\" colspan=\\"1\\">
                      <div class=\\"cell\\">
                        <!---->2
                      </div>
                    </td>
                    <td class=\\"el-table_2_column_17 el-table__cell\\" rowspan=\\"1\\" colspan=\\"1\\">
                      <div class=\\"cell\\">
                        <!---->0.0
                      </div>
                    </td>
                    <td class=\\"el-table_2_column_18 fdr-cell el-table__cell\\" rowspan=\\"1\\" colspan=\\"1\\">
                      <div class=\\"cell\\">
                        <!----><span>10%</span>
                      </div>
                    </td>
                  </tr>
                </tbody>
                <!--v-if-->
              </table>
              <!--v-if-->
              <!--v-if-->
            </div>
          </div>
          <div class=\\"el-scrollbar__bar is-horizontal\\" style=\\"display: none;\\">
            <div class=\\"el-scrollbar__thumb\\" style=\\"transform: translateX(0%);\\"></div>
          </div>
          <div class=\\"el-scrollbar__bar is-vertical\\" style=\\"display: none;\\">
            <div class=\\"el-scrollbar__thumb\\" style=\\"transform: translateY(0%);\\"></div>
          </div>
        </div>
      </div>
      <!--v-if-->
      <div class=\\"el-table__border-left-patch\\"></div>
    </div>
    <div class=\\"el-table__column-resize-proxy\\" style=\\"display: none;\\"></div>
    <div class=\\"el-loading-mask el-loading-fade-enter-from el-loading-fade-leave-from el-loading-fade-leave-active\\" style=\\"\\">
      <div class=\\"el-loading-spinner\\"><svg class=\\"circular\\" viewBox=\\"0 0 50 50\\">
          <circle class=\\"path\\" cx=\\"25\\" cy=\\"25\\" r=\\"20\\" fill=\\"none\\"></circle>
        </svg>
        <p class=\\"el-loading-text\\">Loading results …</p>
      </div>
    </div>
  </div>
  <div class=\\"flex justify-between items-start mt-2 w-full\\">
    <div class=\\"mt-1\\">
      <!--v-if-->
      <div id=\\"annot-count\\" class=\\"mt-2\\"><b>1</b> matching record</div>
      <div class=\\"mt-2\\">
        <div class=\\"fdr-legend-header\\">FDR levels:</div>
        <div class=\\"fdr-legend fdr-5\\">5%</div>
        <div class=\\"fdr-legend fdr-10\\">10%</div>
        <div class=\\"fdr-legend fdr-20\\">20%</div>
        <div class=\\"fdr-legend fdr-50\\">50%</div>
      </div>
    </div>
    <div class=\\"flex w-full items-center justify-end flex-wrap\\">
      <div class=\\"mock-el-popover mt-1\\" width=\\"200\\" trigger=\\"click\\">
        <div>
          <div class=\\"cursor-pointer select-none\\">
            <div class=\\"mock-el-icon el-icon-check\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                <path fill=\\"currentColor\\" d=\\"M406.656 706.944 195.84 496.256a32 32 0 1 0-45.248 45.248l256 256 512-512a32 32 0 0 0-45.248-45.248L406.592 706.944z\\"></path>
              </svg></div><span>Lab</span>
          </div>
          <div class=\\"cursor-pointer select-none\\">
            <div class=\\"mock-el-icon el-icon-check\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                <path fill=\\"currentColor\\" d=\\"M406.656 706.944 195.84 496.256a32 32 0 1 0-45.248 45.248l256 256 512-512a32 32 0 0 0-45.248-45.248L406.592 706.944z\\"></path>
              </svg></div><span>Dataset</span>
          </div>
          <div class=\\"cursor-pointer select-none\\">
            <div class=\\"mock-el-icon el-icon-check\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                <path fill=\\"currentColor\\" d=\\"M406.656 706.944 195.84 496.256a32 32 0 1 0-45.248 45.248l256 256 512-512a32 32 0 0 0-45.248-45.248L406.592 706.944z\\"></path>
              </svg></div><span>Annotation</span>
          </div>
          <div class=\\"cursor-pointer select-none\\">
            <div class=\\"mock-el-icon el-icon-check invisible\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                <path fill=\\"currentColor\\" d=\\"M406.656 706.944 195.84 496.256a32 32 0 1 0-45.248 45.248l256 256 512-512a32 32 0 0 0-45.248-45.248L406.592 706.944z\\"></path>
              </svg></div><span>Adduct</span>
          </div>
          <div class=\\"cursor-pointer select-none\\">
            <div class=\\"mock-el-icon el-icon-check\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                <path fill=\\"currentColor\\" d=\\"M406.656 706.944 195.84 496.256a32 32 0 1 0-45.248 45.248l256 256 512-512a32 32 0 0 0-45.248-45.248L406.592 706.944z\\"></path>
              </svg></div><span>m/z</span>
          </div>
          <div class=\\"cursor-pointer select-none\\">
            <div class=\\"mock-el-icon el-icon-check invisible\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                <path fill=\\"currentColor\\" d=\\"M406.656 706.944 195.84 496.256a32 32 0 1 0-45.248 45.248l256 256 512-512a32 32 0 0 0-45.248-45.248L406.592 706.944z\\"></path>
              </svg></div><span>Off-sample probability %</span>
          </div>
          <div class=\\"cursor-pointer select-none\\">
            <div class=\\"mock-el-icon el-icon-check invisible\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                <path fill=\\"currentColor\\" d=\\"M406.656 706.944 195.84 496.256a32 32 0 1 0-45.248 45.248l256 256 512-512a32 32 0 0 0-45.248-45.248L406.592 706.944z\\"></path>
              </svg></div><span> ρ<sub>spatial</sub></span>
          </div>
          <div class=\\"cursor-pointer select-none\\">
            <div class=\\"mock-el-icon el-icon-check invisible\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                <path fill=\\"currentColor\\" d=\\"M406.656 706.944 195.84 496.256a32 32 0 1 0-45.248 45.248l256 256 512-512a32 32 0 0 0-45.248-45.248L406.592 706.944z\\"></path>
              </svg></div><span> ρ<sub>spectral</sub></span>
          </div>
          <div class=\\"cursor-pointer select-none\\">
            <div class=\\"mock-el-icon el-icon-check invisible\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                <path fill=\\"currentColor\\" d=\\"M406.656 706.944 195.84 496.256a32 32 0 1 0-45.248 45.248l256 256 512-512a32 32 0 0 0-45.248-45.248L406.592 706.944z\\"></path>
              </svg></div><span> ρ<sub>chaos</sub></span>
          </div>
          <div class=\\"cursor-pointer select-none\\">
            <div class=\\"mock-el-icon el-icon-check\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                <path fill=\\"currentColor\\" d=\\"M406.656 706.944 195.84 496.256a32 32 0 1 0-45.248 45.248l256 256 512-512a32 32 0 0 0-45.248-45.248L406.592 706.944z\\"></path>
              </svg></div><span>MSM</span>
          </div>
          <div class=\\"cursor-pointer select-none\\">
            <div class=\\"mock-el-icon el-icon-check invisible\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                <path fill=\\"currentColor\\" d=\\"M406.656 706.944 195.84 496.256a32 32 0 1 0-45.248 45.248l256 256 512-512a32 32 0 0 0-45.248-45.248L406.592 706.944z\\"></path>
              </svg></div><span>Database</span>
          </div>
          <div class=\\"cursor-pointer select-none\\">
            <div class=\\"mock-el-icon el-icon-check invisible\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                <path fill=\\"currentColor\\" d=\\"M406.656 706.944 195.84 496.256a32 32 0 1 0-45.248 45.248l256 256 512-512a32 32 0 0 0-45.248-45.248L406.592 706.944z\\"></path>
              </svg></div><span>Molecules</span>
          </div>
          <div class=\\"cursor-pointer select-none\\">
            <div class=\\"mock-el-icon el-icon-check\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                <path fill=\\"currentColor\\" d=\\"M406.656 706.944 195.84 496.256a32 32 0 1 0-45.248 45.248l256 256 512-512a32 32 0 0 0-45.248-45.248L406.592 706.944z\\"></path>
              </svg></div><span>Isomers</span>
          </div>
          <div class=\\"cursor-pointer select-none\\">
            <div class=\\"mock-el-icon el-icon-check\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                <path fill=\\"currentColor\\" d=\\"M406.656 706.944 195.84 496.256a32 32 0 1 0-45.248 45.248l256 256 512-512a32 32 0 0 0-45.248-45.248L406.592 706.944z\\"></path>
              </svg></div><span>Isobars</span>
          </div>
          <div class=\\"cursor-pointer select-none\\">
            <div class=\\"mock-el-icon el-icon-check\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                <path fill=\\"currentColor\\" d=\\"M406.656 706.944 195.84 496.256a32 32 0 1 0-45.248 45.248l256 256 512-512a32 32 0 0 0-45.248-45.248L406.592 706.944z\\"></path>
              </svg></div><span>Max Intensity</span>
          </div>
          <div class=\\"cursor-pointer select-none\\">
            <div class=\\"mock-el-icon el-icon-check invisible\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                <path fill=\\"currentColor\\" d=\\"M406.656 706.944 195.84 496.256a32 32 0 1 0-45.248 45.248l256 256 512-512a32 32 0 0 0-45.248-45.248L406.592 706.944z\\"></path>
              </svg></div><span>Total Intensity</span>
          </div>
          <div class=\\"cursor-pointer select-none\\">
            <div class=\\"mock-el-icon el-icon-check\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                <path fill=\\"currentColor\\" d=\\"M406.656 706.944 195.84 496.256a32 32 0 1 0-45.248 45.248l256 256 512-512a32 32 0 0 0-45.248-45.248L406.592 706.944z\\"></path>
              </svg></div><span>FDR</span>
          </div>
          <div class=\\"cursor-pointer select-none\\">
            <!--v-if-->
          </div>
        </div>
      </div>
      <div class=\\"mock-el-popover select-btn-wrapper ml-2 mt-1\\" popper-class=\\"export-pop\\" trigger=\\"click\\">
        <p class=\\"export-option\\">Annotations table</p>
        <p class=\\"export-option\\">Pixel intensities</p>
      </div>
      <div class=\\"ml-2 mt-1\\"><button ariadisabled=\\"false\\" type=\\"button\\" class=\\"el-button full-screen-btn\\">
          <!--v-if--><span class=\\"\\"><svg class=\\"full-screen-icon\\"></svg></span>
        </button></div>
    </div>
  </div>
</div>"
`;
